objects/ACCObjTest1__c.object
<CustomObject>
    <description>Test123</description>
    <fields>
        <fullName>ACCField1__c</fullName>
        <label>ACCField1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ACCField2__c</fullName>
        <label>ACCField2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PLt1__c</fullName>
        <description>Test Comment For this</description>
        <label>PLt1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Plt3__c</fullName>
        <description>Add Comment</description>
        <label>Plt3</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>ACCObjTest1</label>
    <nameField>
        <label>ACCObjTest1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ACCObjTest1ss</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>